# stms-v1

./: .gitignore  README.md  Readmee.md
backend/: .env.example  BackendArchitecture.md  BackendReadme.md  README-Development.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 000630c655cd_update_customer_id_and_timestamps.py  166cd3416bec_add_reset_password_fields_to_accounts.py  1ccdac27d513_add_customer_smtp_settings_table.py  1e706901fc2d_create_accounts_table.py  5b1fc8586183_convert_customer_status_to_enum.py  9044fc26ba69_create_customers_table.py  a0e17baa64c5_initial_stms_schema.py  bc6b543309ba_update_account_type_enum.py  d920dc06ddca_add_customer_uid_to_customers.py  eb451d262e15_create_accounts_table.py  f312f9051c0b_make_account_email_unique_and_not_null.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/common/: id_generator.py  username_generator.py
backend/app/core/: rate_limiter.py  security.py  settings.py
backend/app/db/: base.py  clickhouse.py  database.py  dependencies.py  models.py  seed.py  session.py
backend/app/mail/: service.py
backend/app/mail/templates/: reset_password.html
backend/app/modules/accounts/: enums.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/auth/: repository.py  schemas.py  service.py
backend/app/modules/customers/: dependencies.py  enums.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/platform_owner/: repository.py  schemas.py  service.py
backend/scripts/: seed_platform_owner.py
docs/: Day-01.md  Day-02.md
(+92 files in other folders)
